cabal-version:       >=1.10
name:                hs-rqlite
version:             0.1.2.0
synopsis:            A Haskell client for RQlite
description:         See README at <https://github.com/kderme/hs-rqlite/blob/master/README.md>
bug-reports:         https://github.com/kderme/hs-rqlite/issues
license:             BSD3
license-file:        LICENSE
author:              Konstantinos Dermentzis <k.dermenz@gmail.com>
maintainer:          Konstantinos Dermentzis <k.dermenz@gmail.com>
copyright:           Konstantinos Dermentzis <k.dermenz@gmail.com>
category:            Database
extra-source-files:  CHANGELOG.md
build-type:          Simple

library
  hs-source-dirs:      src
  exposed-modules:     Rqlite
                     , Rqlite.Status
  build-depends:       base        
                     , aeson
                     , bifunctors
                     , bytestring
                     , containers
                     , HTTP     
                     , scientific
                     , text     
                     , unordered-containers 
  ghc-options:         -Wall
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/kderme/hs-rqlite
